# koinos-sdk-cpp

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CDT-README.md  CMakeLists.txt  Dockerfile  README.md  install_pkg.sh  koinos-install.sh  koinos_install.sh  make_pkg.sh
ci/: after_success.sh  build.sh  install.sh
cmake/: #KoinosConfigureToolchain.cmake#  KoinosBoostHeaders.cmake  KoinosConfigureToolchain.cmake  KoinosLibraries.cmake  KoinosProto.cmake  KoinosProtoInstall.cmake  KoinosWasiSDK.cmake  KoinosWasmToolchain.cmake.in
docker/project/: CMakeLists.txt
docker/project/src/: CMakeLists.txt
docker/project/types/: CMakeLists.txt
docker/scripts/: build.sh
libraries/: CMakeLists.txt
libraries/koinos_api_c/: CMakeLists.txt  koinos_api.c
libraries/koinos_api_c/include/koinos/system/: koinos_api.h  system_call_ids.h  thunk_ids.h
libraries/koinos_api_cpp/: CMakeLists.txt  crypto.cpp  koinos_api_cpp.cpp  system_calls.cpp
libraries/koinos_api_cpp/include/koinos/: contracts.hpp  crypto.hpp  token.hpp
libraries/koinos_api_cpp/include/koinos/system/: system_calls.hpp
libraries/koinos_wasi_api/: CMakeLists.txt  wasi_api.c
scripts/: koinos_generate_proto.bat  koinos_generate_proto.sh
